<resources>
    <string name="app_name">NotificationExample</string>
    <string name="main_notification_channel_name">channel name</string>
    <string name="settings">Settings</string>
    <string name="order">100</string>

    <!---->
    <string name="daily_notification_select">daily notification selection</string>
    <string name="daily_notification_title">Daily Notifications</string>
    <string name="daily_notification_off_summary">Daily Notifications: OFF</string>
    <string name="daily_notification_on_summary">Daily Notifications: ON</string>

    <!--string values for time preference-->
    <string name="timePreference_title">Notification Time</string>
    <string name="timePreference_summary">Set Desired Notification Time (Default 8:00 AM)</string>
    <string name="time_preference_key">time preference key</string>
    <string name="timePreference_default_value">90</string>
    <string name="category_daily_notifications">Daily Notifications</string>
    <string name="time_preference_default_val">480</string>

</resources>
